index.html done

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
+
+    <title>Yasin's BookList</title>
 </head>
 <body>
     <div class="container mt-4">
     <h1 class="display-4 text-center">
-      <i class="fas fa-book-open text-primary"></i> My<span class="text-primary">Book</span>List</h1>
+      <i class="fas fa-book-open text-warning"></i> My<span class="text-warning">Book</span>List</h1>
       <form id="book-form">
         <div class="form-group">
           <label for="title">Title</label>
@@ -23,8 +27,9 @@
           <label for="isbn">ISBN#</label>
           <input type="text" id="isbn" class="form-control">
         </div>
-        <input type="submit" value="Add Book" class="btn btn-primary btn-block">
+        <input type="submit" value="Add Book" class="btn btn-danger btn-block">
       </form>
+
       <table class="table table-striped mt-5">
         <thead>
           <tr>
@@ -34,8 +39,11 @@
             <th></th>
           </tr>
         </thead>
-        <tbody id="book-list"></tbody>
+        <tbody id="book-list">
+          
+        </tbody>
       </table>
+
   </div>
 </body>
 </html>
