--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,11 @@
           </tr>
         </thead>
         <tbody id="book-list">
-          
+
         </tbody>
       </table>
 
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
