--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
 
-    <title>Yasin's BookList</title>
+    <title>Yasin's BookStore</title>
 </head>
 <body>
     <div class="container mt-4">
     <h1 class="display-4 text-center">
-      <i class="fas fa-book-open text-warning"></i> My<span class="text-warning">Book</span>List</h1>
+      <i class="fas fa-book-open text-warning"></i> My<span class="text-warning">Book</span>Store</h1>
       <form id="book-form">
         <div class="form-group">
           <label for="title">Title</label>
